tests/error/class_enum.gw
#! [contains] unary operator '--' cannot be used on non-mutable data-types
class C
{
  enum E { a, b };
}

C.a;
<<< C.a >>>;
<<< --C.a >>>;
